--- a/cmis-type-manager-web/src/main/webapp/index.xhtml
+++ b/cmis-type-manager-web/src/main/webapp/index.xhtml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:ui="http://java.sun.com/jsf/facelets">
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:ui="http://java.sun.com/jsf/facelets">
 
 <h:head>
 </h:head>
 <h:body>
-    <h3>JSF 2.0 Hello World Example - hello.xhtml</h3>
+    <h3>Chemistry</h3>
     <h:form>
-    #{repo.message}
+        <h:dataTable value="#{contentBean.list}" var="item">
+            <h:column>#{item}</h:column>
+        </h:dataTable>
     </h:form>
 </h:body>
 </html>
