--- a/cmis-type-manager-web/src/main/webapp/fullscreen.xhtml
+++ b/cmis-type-manager-web/src/main/webapp/fullscreen.xhtml
@@ -1,15 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<uib:page  xmlns="http://www.w3.org/1999/xhtml"
-           xmlns:h="http://java.sun.com/jsf/html"
-           xmlns:uib="http://engagepoint.com/uib"
-           xmlns:ui="http://java.sun.com/jsf/facelets"
-           markupType="html5"
-           contentType="text/html"
-           pageTitle="UI Bootstrap Demo"
-           project="financials">
-
+<uib:page xmlns="http://www.w3.org/1999/xhtml"
+          xmlns:h="http://java.sun.com/jsf/html"
+          xmlns:uib="http://engagepoint.com/uib"
+          xmlns:ui="http://java.sun.com/jsf/facelets"
+          markupType="html5"
+          contentType="text/html"
+          pageTitle="UI Bootstrap Demo"
+          project="financials">
+    <style type="text/css">
+        .help-menu {
+            display: none;
+        }
+        #logo img{
+            max-width: 100%;
+            margin-top: 30px !important;
+        }
+    </style>
     <uib:pageLayout>
-        <uib:pageHeaderFacet>
+
+        <uib:pageHeaderFacet logo="img/logo.png" logoAltText="Team B">
             <ui:insert name="topMenu">
                 <ui:include src="topmenubar.xhtml"/>
             </ui:insert>
