TB-39 Create service logic (progress)

--- a/cmis-type-manager-web/src/main/webapp/index.xhtml
+++ b/cmis-type-manager-web/src/main/webapp/index.xhtml
@@ -23,5 +23,12 @@
             </uib:dataTable>
         </h:form>
 
+        <h:form id="basicsampleform">
+
+
+
+            <p:commandButton id="button" value="Submit" update="basicsampleform" styleClass="mt20" />
+        </h:form>
+
     </ui:define>
 </ui:composition>
