TB-39 Create service logic (progress)

--- a/cmis-type-manager-web/src/main/webapp/index.xhtml
+++ b/cmis-type-manager-web/src/main/webapp/index.xhtml
@@ -10,7 +10,7 @@
     </ui:define>
     <ui:define name="mainContent">
         <h:form prependId="false">
-            <uib:dataTable id="dataTable" var="object" rows="100" value="#{contentBean.list}" summary="basic table">
+            <uib:dataTable id="dataTable" var="object" rows="100" value="#{contentBean.rootFolder}" summary="basic table">
                 <f:facet name="header">
                     <p> Chemistry</p>
                 </f:facet>
