--- a/cmis-type-manager-web/src/main/webapp/index.xhtml
+++ b/cmis-type-manager-web/src/main/webapp/index.xhtml
@@ -10,25 +10,18 @@
     </ui:define>
     <ui:define name="mainContent">
         <h:form prependId="false">
-            <uib:dataTable id="dataTable" var="object" rows="100" value="#{contentBean.rootFolder}" summary="basic table">
+            <uib:dataTable id="dataTable" var="object" rows="100" value="#{contentBean.rootFolders}"
+                           summary="basic table">
                 <f:facet name="header">
                     <p> Chemistry</p>
                 </f:facet>
                 <uib:column>
                     <f:facet name="header">
-
                     </f:facet>
                     <h:outputText value="#{object}"/>
                 </uib:column>
             </uib:dataTable>
+            <ui:debug />
         </h:form>
-
-        <h:form id="basicsampleform">
-
-
-
-            <p:commandButton id="button" value="Submit" update="basicsampleform" styleClass="mt20" />
-        </h:form>
-
     </ui:define>
 </ui:composition>
