--- a/cmis-type-manager-web/src/main/webapp/login.xhtml
+++ b/cmis-type-manager-web/src/main/webapp/login.xhtml
@@ -1,17 +1,14 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html">
-
+<h:head>
+    <title>Login Form</title>
+</h:head>
 <h:body>
-    <h1>JSF 2 textbox example</h1>
-    <h:panelGrid>
-        <h:outputLabel value="Username: " style="font-weight:bold" />
-        <h:inputText value="#{loginBean.userName}" />
-        <h:outputLabel value="Password: " style="font-weight:bold" />
-        <h:inputSecret value="#{loginBean.password}" />
-        <h:commandButton value="Login" />
-    </h:panelGrid>
-    </h:body>
+    <h2>Hello, please log in:</h2>
+    <h:form>
+        User : <h:inputText value="#{loginBean.userName}" />
+        Password : <h:inputSecret value="#{loginBean.password}" />
+        <h:commandButton action="" value="Submit" />
+    </h:form>
+</h:body>
 </html>
