--- a/cmis-types-manager-web/src/main/webapp/login.xhtml
+++ b/cmis-types-manager-web/src/main/webapp/login.xhtml
@@ -1,14 +1,28 @@
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html">
-<h:head>
-    <title>Login Form</title>
-</h:head>
-<h:body>
-    <h2>Hello, please log in:</h2>
-    <h:form>
-        User : <h:inputText value="#{loginBean.userName}" />
-        Password : <h:inputSecret value="#{loginBean.password}" />
-        <h:commandButton action="" value="Submit" />
-    </h:form>
-</h:body>
-</html>
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:h="http://java.sun.com/jsf/html"
+                xmlns:p="http://primefaces.org/ui"
+                xmlns:f="http://java.sun.com/jsf/core"
+                xmlns:ui="http://java.sun.com/jsf/facelets"
+                template="fullscreen.xhtml"
+                xmlns:uib="http://engagepoint.com/uib">
+    <ui:define name="leftMenu">
+        <ui:include src="leftMenu.xhtml"/>
+    </ui:define>
+    <ui:define name="mainContent">
+        <h3>Login here</h3>
+        <h:form id="login-form">
+            <h:outputText value="username:"/>
+            <h:inputText value="#{loginBean.username}" id="username"/>
+            <br/>
+            <h:outputText value="password:"/>
+            <h:inputSecret value="#{loginBean.password}" id="password"/>
+            <br/>
+            <h:outputText value="url:"/>
+            <h:inputText value="#{loginBean.url}"  id="url"/>
+            <br/>
+            <h:commandButton id="button" value="Login" action="#{loginBean.doLogin}"/>
+            <br/>
+            <br/>
+        </h:form>
+    </ui:define>
+</ui:composition>
