--- a/cmis-types-manager-web/src/main/webapp/index.xhtml
+++ b/cmis-types-manager-web/src/main/webapp/index.xhtml
@@ -10,7 +10,7 @@
     </ui:define>
     <ui:define name="mainContent">
         <h:form prependId="false">
-            <uib:dataTable id="dataTable" var="object" rows="100" value="#{contentBean.rootFolders}"
+            <uib:dataTable id="dataTable" var="object" rows="100" value="#{mainBean.rootFolders}"
                            summary="basic table">
                 <f:facet name="header">
                     <p> Chemistry</p>
