--- a/cmis-types-manager-web/src/main/webapp/index.xhtml
+++ b/cmis-types-manager-web/src/main/webapp/index.xhtml
@@ -3,11 +3,9 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
-                template="fullscreen.xhtml"
+                template="template.xhtml"
                 xmlns:uib="http://engagepoint.com/uib">
-    <ui:define name="leftMenu">
-        <ui:include src="leftMenu.xhtml"/>
-    </ui:define>
+
     <ui:define name="mainContent">
         <h:form prependId="false">
             <uib:dataTable id="dataTable" var="object" rows="100" value="#{mainBean.rootFolders}"
@@ -21,7 +19,7 @@
                     <h:outputText value="#{object}"/>
                 </uib:column>
             </uib:dataTable>
-            <ui:debug />
+            <ui:debug/>
         </h:form>
     </ui:define>
 </ui:composition>
