--- a/cmis-types-manager-web/src/main/webapp/dashboard/index.xhtml
+++ b/cmis-types-manager-web/src/main/webapp/dashboard/index.xhtml
@@ -3,13 +3,9 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
-                template="template.xhtml"
+                template="../template.xhtml"
                 xmlns:uib="http://engagepoint.com/uib">
     <ui:define name="mainContent">
-        <h:form>
-            <h:outputText value="Error"/>
-            <p:commandButton value="Go back" action="index"/>
-        </h:form>
 
     </ui:define>
 </ui:composition>
